[gd_scene load_steps=16 format=2]

[ext_resource path="res://Levels/Scenes/LevelOne/L1Map.gd" type="Script" id=1]
[ext_resource path="res://Levels/Scenes/LevelOne/Rooms/L1R1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Scenes/LevelOne/Rooms/L1R1Bathroom.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Scenes/LevelOne/Rooms/L1Hallway.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Scenes/LevelOne/Rooms/L1RoomA.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/Scenes/LevelOne/Rooms/L1RoomB.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/Scenes/LevelOne/Rooms/L1RoomC.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/Scenes/LevelOne/Rooms/L1RoomD.tscn" type="PackedScene" id=8]
[ext_resource path="res://Levels/Scenes/LevelOne/Rooms/L1BossRoom.tscn" type="PackedScene" id=9]
[ext_resource path="res://Player/Scenes/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/Scenes/Camera2D.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/Scenes/DialogueBox.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Scripts/DoorBlock.gd" type="Script" id=13]
[ext_resource path="res://Assets/Scenes/Door.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 24, 10 )

[node name="L1Map" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="L1R1" parent="." index="0" instance=ExtResource( 2 )]

[node name="L1R1Bathroom" parent="." index="1" instance=ExtResource( 3 )]

_sections_unfolded = [ "Transform", "Z Index" ]

[node name="L1Hallway" parent="." index="2" instance=ExtResource( 4 )]

editor/display_folded = true

[node name="RoomA" type="Area2D" parent="L1Hallway" index="6"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="L1Hallway/RoomA" index="0"]

position = Vector2( 920, 43 )
scale = Vector2( 1, 4.30769 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="L1RoomA" parent="." index="3" instance=ExtResource( 5 )]

visible = false

[node name="L1RoomB" parent="." index="4" instance=ExtResource( 6 )]

visible = false

[node name="L1RoomC" parent="." index="5" instance=ExtResource( 7 )]

[node name="L1RoomD" parent="." index="6" instance=ExtResource( 8 )]

[node name="L1BossRoom" parent="." index="7" instance=ExtResource( 9 )]

[node name="Player" parent="." index="8" instance=ExtResource( 10 )]

position = Vector2( 511.785, 308.068 )
collision_mask = 6
_sections_unfolded = [ "Collision", "Pause", "collision" ]

[node name="Camera2D" parent="." index="9" instance=ExtResource( 11 )]

editor/display_folded = true
visible = false
current = true

[node name="NinePatchRect" parent="Camera2D" index="1" instance=ExtResource( 12 )]

visible = false
margin_top = 349.0

[node name="DoorBlock" parent="." index="10" instance=ExtResource( 12 )]

visible = false
script = ExtResource( 13 )
_sections_unfolded = [ "Collision", "Patch Margin", "Rect", "Transform" ]
openPuzzle = null

[node name="Door" parent="." index="11" instance=ExtResource( 14 )]

visible = true


[editable path="Camera2D/NinePatchRect"]
